--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <form action="get">
-  <input class="input1 hapusjikatidakperlu" type="text">
+  <input data-cy="test" class="input1 hapusjikatidakperlu" type="text">
   <input type="button" value="test">
 
 </form>
